@@ -229,4 +229,4 @@ zkoth:
 
 
 # Do not edit this value, this is used to check the config is up to date with the lastest version of the plugin (if it is not, it will be automatically updated)
-version: 7
+version: 8
